src/test/valid/extensionTests/stdLibrary/swapInt.wacc
# using the swap_int function from the standard library

# Output:
# [4, 3, 7, 2]

# Program:

begin
  int[] arr = [7, 3, 4, 2] ;
  arr = call swap_int(0, 2, arr) ;
  
  print "[" ;
  int i = 0 ;
  int length = len arr ;
  while i < (length - 1) do
    print arr[i] ;
    print ", " ;
    i = i + 1
  done ;
  print arr[i] ;
  println "]"
end
