src/test/invalid/semanticErr/extensionTests/forLoops/accessOutOfScope.wacc
begin 
  for(int i = 0; i < 3; i = i+1) do
    int j = 5;	
    println i
  done;
  j = 4  
end
